# service/uservice.go
@@ -3,13 +3,15 @@ package service
 import (
 	"fmt"
 	"ginchat/models"
+	"ginchat/utils"
 	"github.com/asaskevich/govalidator"
 	"github.com/gin-gonic/gin"
+	"math/rand"
 	"strconv"
 )
 
 // GetUserList
-// Summary 所有用户
+// @Summary 所有用户
 // @Tags 首页
 // @Accept json
 // @Success 200 {string} json{"code","message"}
@@ -18,33 +20,66 @@ func GetUserList(c *gin.Context) {
 
 	data := make([]*models.UserBasic, 10)
 	data = models.GetUserList()
-
 	c.JSON(200, gin.H{
 		"message": data,
 	})
 }
 
-// CreateUser
-// Summary 新增用户
-// @Tags 首页
-// @param name query string false "用户名称"
-// @param password query string false "密码"
-// @param repassword query string false "确定密码"
+// FindUserByNameAndPwd
+// @Summary 登录
+// @Tags 首页Api
 // @Accept json
-// @Success 200 {string} json{"code","message"}
-// @Router /user/creatuser [get]
+// @Param    name query string false "用户名称"
+// @Param    password query string false "密码"
+// @Success 200 {string} json {"code","message"}
+// @Router /user/findUserbynameandpwd  [post]
+func FindUserByNameAndPwd(r *gin.Context) {
+
+	data := models.UserBasic{}
+	name := r.Query("name")
+	password := r.Query("password")
+	user := models.FindUserByName(name)
+	if user.Name == "" {
+		r.JSON(200, gin.H{
+			"message": "该用户不存在",
+		})
+	}
+	retsut := utils.ValidPassword(password, user.Salt, user.Password)
+	if !retsut {
+		r.JSON(200, gin.H{
+			"message": "密码不正确",
+		})
+		return
+	}
+	pwd := utils.MakePassword(password, user.Salt)
+	data = models.FindUserByNameAndPwd(name, pwd)
+	r.JSON(200, gin.H{
+		"message": data,
+	})
+
+}
+
+// CreateUser
+// @Summary 新增用户
+// @Tags 首页Api
+// @Param         name query string false "用户名称"
+// @Param         password query string false "密码"
+// @Param         repassword query string false "确定密码"
+// @Accept json
+// @Success 200 {string} json {"code","message"}
+// @Failure 200 {object} errors.Error
+// @Router /user/creatuser    [get]
 func CreateUser(pa *gin.Context) {
 	user := models.UserBasic{}
-
 	name := pa.Query("name")
-	user.Name = name
+	user.Name = pa.Query("name")
 	udata := models.FindUserByName(name)
-	if udata != nil {
+	if udata.Name != "" {
 		pa.JSON(-1, gin.H{
 			"message": "用户已经注册",
 		})
 	}
-	//salt：=fmt.Sprinft("%06d",rand.int32())
+	salt := fmt.Sprint("%06", rand.Int31())
 	password := pa.Query("password")
 	repassword := pa.Query("repassword")
 	if password != repassword {
@@ -55,22 +90,27 @@ func CreateUser(pa *gin.Context) {
 		return
 	}
 	user.Password = password
-	//user.Password=utils.MakePassword(password,salt)
-	models.CreateUesr(user)
-	pa.JSON(200, gin.H{
-		"message": "用户创建成功",
-	})
+	user.Password = utils.MakePassword(password, salt)
+	createdUser, err := models.CreateUser(user)
+	if err != nil {
+		pa.JSON(-1, gin.H{
+			"message": err,
+		})
+	} else {
+		pa.JSON(200, gin.H{
+			"message": "用户创建成功",
+			"user":    createdUser.Name,
+		})
+	}
 
 }
 
 // DeleteUser
-// Summary 删除用户
-// @Tags 首页
-// @param name query string false "用户名称"
-// @param password query string false "密码"
-// @param repassword query string false "确定密码"
+// @Summary 删除用户
+// @Tags 首页Api
+// @Param id query string false "用户名称"
 // @Accept json
-// @Success 200 {string} json{"code","message"}
+// @Success 200 {string} json {"code","message"}
 // @Router /user/deleteuser [get]
 func DeleteUser(pa *gin.Context) {
 	user := models.UserBasic{}
@@ -83,14 +123,14 @@ func DeleteUser(pa *gin.Context) {
 }
 
 // UpdateUser
-// Summary 修改用户
-// @Tags 首页
-// @param name query string false "用户名称"
-// @param password query string false "密码"
-// @param phone query string false "电话"
-// @param email query string false "邮箱"
+// @Summary 修改用户
+// @Tags 首页Api
+// @Param name query string false "用户名称"
+// @Param password query string false "密码"
+// @Param phone query string false "电话"
+// @Param email query string false "邮箱"
 // @Accept json
-// @Success 200 {string} json{"code","message"}
+// @Success 200 {string} json {"code","message"}
 // @Router /user/updateteuser [post]
 func UpdateUser(pa *gin.Context) {
 	user := models.UserBasic{}
@@ -100,7 +140,6 @@ func UpdateUser(pa *gin.Context) {
 	user.Password = pa.PostForm("password")
 	user.Phone = pa.PostForm("phone")
 	user.Email = pa.PostForm("email")
-
 	_, err := govalidator.ValidateStruct(user)
 	if err != nil {
 		fmt.Println(err)
